// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-null-types (provider=cockroachdb, runtime=edge) properties of DbNull/JsonNull/AnyNull custom instances are not allowed 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation:

{
  data: {
    json: new Prisma.NullTypes.JsonNull()
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  }
}

Argument json: Provided value new Prisma.NullTypes.JsonNull() of type JsonNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=cockroachdb, runtime=edge) requiredJsonField DbNull 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation:

{
  data: {
    json: Prisma.DbNull
          ~~~~~~~~~~~~~
  }
}

Argument json: Provided value Prisma.DbNull of type DbNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=cockroachdb, runtime=node) properties of DbNull/JsonNull/AnyNull custom instances are not allowed 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation in
/client/tests/functional/json-null-types/tests.ts:0:0

  XX 
  XX test('custom instances are not allowed', async () => {
  XX   await expect(
→ XX     prisma.requiredJsonField.create({
           data: {
             json: new Prisma.NullTypes.JsonNull()
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         })

Argument json: Provided value new Prisma.NullTypes.JsonNull() of type JsonNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=cockroachdb, runtime=node) requiredJsonField DbNull 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation in
/client/tests/functional/json-null-types/tests.ts:0:0

  XX 
  XX test('DbNull', async () => {
  XX   await expect(
→ XX     prisma.requiredJsonField.create({
           data: {
             json: Prisma.DbNull
                   ~~~~~~~~~~~~~
           }
         })

Argument json: Provided value Prisma.DbNull of type DbNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=mysql, runtime=edge) properties of DbNull/JsonNull/AnyNull custom instances are not allowed 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation:

{
  data: {
    json: new Prisma.NullTypes.JsonNull()
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  }
}

Argument json: Provided value new Prisma.NullTypes.JsonNull() of type JsonNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=mysql, runtime=edge) requiredJsonField DbNull 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation:

{
  data: {
    json: Prisma.DbNull
          ~~~~~~~~~~~~~
  }
}

Argument json: Provided value Prisma.DbNull of type DbNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=mysql, runtime=node) properties of DbNull/JsonNull/AnyNull custom instances are not allowed 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation in
/client/tests/functional/json-null-types/tests.ts:0:0

  XX 
  XX test('custom instances are not allowed', async () => {
  XX   await expect(
→ XX     prisma.requiredJsonField.create({
           data: {
             json: new Prisma.NullTypes.JsonNull()
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         })

Argument json: Provided value new Prisma.NullTypes.JsonNull() of type JsonNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=mysql, runtime=node) requiredJsonField DbNull 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation in
/client/tests/functional/json-null-types/tests.ts:0:0

  XX 
  XX test('DbNull', async () => {
  XX   await expect(
→ XX     prisma.requiredJsonField.create({
           data: {
             json: Prisma.DbNull
                   ~~~~~~~~~~~~~
           }
         })

Argument json: Provided value Prisma.DbNull of type DbNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=postgresql, runtime=edge) properties of DbNull/JsonNull/AnyNull custom instances are not allowed 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation:

{
  data: {
    json: new Prisma.NullTypes.JsonNull()
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  }
}

Argument json: Provided value new Prisma.NullTypes.JsonNull() of type JsonNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=postgresql, runtime=edge) requiredJsonField DbNull 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation:

{
  data: {
    json: Prisma.DbNull
          ~~~~~~~~~~~~~
  }
}

Argument json: Provided value Prisma.DbNull of type DbNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=postgresql, runtime=node) properties of DbNull/JsonNull/AnyNull custom instances are not allowed 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation in
/client/tests/functional/json-null-types/tests.ts:0:0

  XX 
  XX test('custom instances are not allowed', async () => {
  XX   await expect(
→ XX     prisma.requiredJsonField.create({
           data: {
             json: new Prisma.NullTypes.JsonNull()
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
           }
         })

Argument json: Provided value new Prisma.NullTypes.JsonNull() of type JsonNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;

exports[`json-null-types (provider=postgresql, runtime=node) requiredJsonField DbNull 1`] = `

Invalid \`prisma.requiredJsonField.create()\` invocation in
/client/tests/functional/json-null-types/tests.ts:0:0

  XX 
  XX test('DbNull', async () => {
  XX   await expect(
→ XX     prisma.requiredJsonField.create({
           data: {
             json: Prisma.DbNull
                   ~~~~~~~~~~~~~
           }
         })

Argument json: Provided value Prisma.DbNull of type DbNull on prisma.createOneRequiredJsonField is not a JsonNullValueInput.
→ Possible values: JsonNullValueInput.JsonNull


`;
